--- a/buildspecs/load/buildspec.yaml
+++ b/buildspecs/load/buildspec.yaml
@@ -23,6 +23,9 @@ phases:
       - export NOT_FOUND_MESSAGE='No load test commands found.'
       - if [[ $(echo $COMMANDS | awk '{print NF}') > 0 ]]; then for COMMAND in $COMMANDS; do echo $COMMAND | base64 --decode | bash; done; else echo $NOT_FOUND_MESSAGE; fi
 
-artifacts:
+reports:
+  LoadTestReports:
   files:
-    - $CODEBUILD_SRC_DIR_SourceCode/output/load/**/*
+      - '**/*'
+    base-directory: $CODEBUILD_SRC_DIR_SourceCode/output/load
+
