--- a/buildspecs/e2e/buildspec.yaml
+++ b/buildspecs/e2e/buildspec.yaml
@@ -23,9 +23,6 @@ phases:
       - export NOT_FOUND_MESSAGE='No end to end test commands found.'
       - if [[ $(echo $COMMANDS | awk '{print NF}') > 0 ]]; then for COMMAND in $COMMANDS; do echo $COMMAND | base64 --decode | bash; done; else echo $NOT_FOUND_MESSAGE; fi
 
-reports:
-  End2EndTestReports:
-    files:
-      - '**/*'
-    base-directory: $CODEBUILD_SRC_DIR_SourceCode/output/e2e
-
+artifacts:
+  files:
+    - $CODEBUILD_SRC_DIR_SourceCode/output/e2e/**/*
