--- a/buildspecs/load/buildspec.yaml
+++ b/buildspecs/load/buildspec.yaml
@@ -19,13 +19,10 @@ phases:
     commands:
       - cd $CODEBUILD_SRC_DIR_SourceCode
       - cat ./xilution.yaml
-      - export COMMANDS=$(yq read xilution.yaml -j | jq -r '.tests.load.commands[] | @base64')
+      - export COMMANDS=$(yq read ./xilution.yaml -j | jq -r '.tests.load.commands[] | @base64')
       - export NOT_FOUND_MESSAGE='No load test commands found.'
       - if [[ $(echo $COMMANDS | awk '{print NF}') > 0 ]]; then for COMMAND in $COMMANDS; do echo $COMMAND | base64 --decode | bash; done; else echo $NOT_FOUND_MESSAGE; fi
 
-reports:
-  LoadTestReports:
-    files:
-        - '**/*'
-    base-directory: $CODEBUILD_SRC_DIR_SourceCode/output/load
-
+artifacts:
+  files:
+    - $CODEBUILD_SRC_DIR_SourceCode/output/load/**/*
