--- a/devops/pipeline.yml
+++ b/devops/pipeline.yml
@@ -65,7 +65,7 @@ Resources:
                 StackName: !Sub ${Repository}-resources
                 ActionMode: CREATE_UPDATE
                 TemplatePath: SourceCode::aws/cloudformation/resources.yml
-                ParameterOverrides: !Sub '{"XilutionSharedAccountId": ${XilutionSharedAccountId}}'
+                ParameterOverrides: !Sub '{ "XilutionSharedAccountId": "${XilutionSharedAccountId}" }'
                 RoleArn: !Sub arn:aws:iam::${AWS::AccountId}:role/Deployer
                 Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND,CAPABILITY_NAMED_IAM
               RoleArn: !Sub arn:aws:iam::${AWS::AccountId}:role/Deployer
