--- a/devops/pipeline.yml
+++ b/devops/pipeline.yml
@@ -6,6 +6,8 @@ Parameters:
     Type: String
   XilutionSharedAccountId:
     Type: String
+  XilutionProdAccountId:
+    Type: String
 
 Resources:
   PipelineWebhook:
@@ -66,6 +68,6 @@ Resources:
                 ActionMode: CREATE_UPDATE
                 TemplatePath: SourceCode::aws/cloudformation/resources.yml
                 ParameterOverrides: !Sub '{ "XilutionSharedAccountId": "${XilutionSharedAccountId}" }'
-                RoleArn: !Sub arn:aws:iam::${AWS::AccountId}:role/Deployer
+                RoleArn: !Sub arn:aws:iam::${XilutionProdAccountId}:role/Deployer
                 Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND,CAPABILITY_NAMED_IAM
-              RoleArn: !Sub arn:aws:iam::${AWS::AccountId}:role/Deployer
+              RoleArn: !Sub arn:aws:iam::${XilutionProdAccountId}:role/Deployer
