--- a/aws/cloudformation/resources.yml
+++ b/aws/cloudformation/resources.yml
@@ -6,7 +6,7 @@ Parameters:
     Type: String
 
 Resources:
-  BuildAndDeployProject:
+  BuildDockerImageProject:
     Type: AWS::CodeBuild::Project
     Properties:
       Artifacts:
@@ -17,7 +17,7 @@ Resources:
         Image: !Sub ${AWS::AccountId}.dkr.ecr.us-east-1.amazonaws.com/xilution/codebuild/docker-19:latest
         PrivilegedMode: true
         Type: LINUX_CONTAINER
-      Name: penguin-build-and-deploy
+      Name: penguin-build-docker-image
       ServiceRole: !Sub arn:aws:iam::${AWS::AccountId}:role/Deployer
       Source:
         BuildSpec: buildspecs/build/buildspec.yml
