chore: add infrastructure deployment project and validate env vars

--- a/aws/cloudformation/resources.yml
+++ b/aws/cloudformation/resources.yml
@@ -22,3 +22,20 @@ Resources:
       Source:
         BuildSpec: buildspecs/build/buildspec.yml
         Type: CODEPIPELINE
+
+  DeployInfrastructureProject:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Artifacts:
+        Type: CODEPIPELINE
+      EncryptionKey: !Sub arn:aws:kms:us-east-1:${XilutionSharedAccountId}:alias/xilution-build-artifact-key
+      Environment:
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: !Sub ${AWS::AccountId}.dkr.ecr.us-east-1.amazonaws.com/xilution/codebuild/docker-19:latest
+        PrivilegedMode: true
+        Type: LINUX_CONTAINER
+      Name: penguin-deploy-infrastructure
+      ServiceRole: !Sub arn:aws:iam::${AWS::AccountId}:role/Deployer
+      Source:
+        BuildSpec: buildspecs/infrastructure/buildspec.yml
+        Type: CODEPIPELINE
