--- a/buildspecs/deploy/buildspec-down.yaml
+++ b/buildspecs/deploy/buildspec-down.yaml
@@ -10,6 +10,7 @@ phases:
       - export AWS_ACCESS_KEY_ID=`cat aws-creds.json | jq -r '.Credentials.AccessKeyId'`
       - export AWS_SECRET_ACCESS_KEY=`cat aws-creds.json | jq -r '.Credentials.SecretAccessKey'`
       - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
+      - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
   build:
     commands:
       - helm tiller run tiller -- helm delete wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME
