--- a/buildspecs/e2e/buildspec.yaml
+++ b/buildspecs/e2e/buildspec.yaml
@@ -3,6 +3,11 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - cd $CODEBUILD_SRC_DIR_SourceCode
+      - cat ./xilution.yaml
+      - echo $STAGE_NAME
+      - export EXCLUDE=$(yq read ./xilution.yaml -j | jq -r '.tests.e2e.excludeStages[]? | @base64')
+      - if [[ $(echo EXCLUDE | awk '{print NF}') > 0 ]]; then for STAGE in $EXCLUDE; do if [[ $(echo $STAGE | base64 --decode | awk '{print tolower($0)}') == $STAGE_NAME ]]; then echo Skipping Stage && exit 0; fi; done; fi
       - |
         aws sts assume-role \
           --role-arn arn:aws:iam::$CLIENT_AWS_ACCOUNT:role/xilution-developer-role \
@@ -18,7 +23,6 @@ phases:
   build:
     commands:
       - cd $CODEBUILD_SRC_DIR_SourceCode
-      - cat ./xilution.yaml
       - export COMMANDS=$(yq read ./xilution.yaml -j | jq -r '.tests.e2e.commands[] | @base64')
       - export NOT_FOUND_MESSAGE='No end to end test commands found.'
       - if [[ $(echo $COMMANDS | awk '{print NF}') > 0 ]]; then for COMMAND in $COMMANDS; do echo $COMMAND | base64 --decode | bash; done; else echo $NOT_FOUND_MESSAGE; fi
