--- a/buildspecs/e2e/buildspec.yaml
+++ b/buildspecs/e2e/buildspec.yaml
@@ -5,6 +5,8 @@ phases:
     commands:
       - env
       - cd $CODEBUILD_SRC_DIR_SourceCode || false
+      - pwd
+      - ls
       - ./scripts/prepare-test-build-env.sh $CLIENT_AWS_ACCOUNT xilution-developer-role
   build:
     commands:
