--- a/buildspecs/e2e/buildspec.yaml
+++ b/buildspecs/e2e/buildspec.yaml
@@ -6,8 +6,7 @@ phases:
       - ./scripts/prepare-test-build-env.sh $CLIENT_AWS_ACCOUNT xilution-developer-role
   build:
     commands:
-      - cd $CODEBUILD_SRC_DIR_SourceCode || false
-      - ./scripts/run-tests.sh $STAGE_NAME ".tests.e2e.excludeStages[]?" ".tests.e2e.commands[]?"
+      - ./scripts/run-tests.sh $CODEBUILD_SRC_DIR_SourceCode $STAGE_NAME ".tests.e2e.excludeStages[]?" ".tests.e2e.commands[]?"
 artifacts:
   files:
     - $CODEBUILD_SRC_DIR_SourceCode/output/e2e/**/*
