--- a/buildspecs/load/buildspec.yaml
+++ b/buildspecs/load/buildspec.yaml
@@ -6,8 +6,7 @@ phases:
       - ./scripts/prepare-test-build-env.sh $CLIENT_AWS_ACCOUNT xilution-developer-role
   build:
     commands:
-      - cd $CODEBUILD_SRC_DIR_SourceCode || false
-      - ./scripts/run-tests.sh $STAGE_NAME ".tests.load.excludeStages[]?" ".tests.load.commands[]?"
+      - ./scripts/run-tests.sh $CODEBUILD_SRC_DIR_SourceCode $STAGE_NAME ".tests.load.excludeStages[]?" ".tests.load.commands[]?"
 artifacts:
   files:
     - $CODEBUILD_SRC_DIR_SourceCode/output/load/**/*
