feat: added seed data and lots of refactoring

--- a/buildspecs/deploy/buildspec-up.yaml
+++ b/buildspecs/deploy/buildspec-up.yaml
@@ -4,13 +4,12 @@ phases:
   pre_build:
     commands:
       - |
-        aws sts assume-role \
-          --role-arn arn:aws:iam::$CLIENT_AWS_ACCOUNT:role/xilution-developer-role \
-          --role-session-name xilution-client-session > aws-creds.json
-      - export AWS_ACCESS_KEY_ID=`cat aws-creds.json | jq -r '.Credentials.AccessKeyId'`
-      - export AWS_SECRET_ACCESS_KEY=`cat aws-creds.json | jq -r '.Credentials.SecretAccessKey'`
-      - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
-      - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
+        ./scripts/pre-build.sh \
+          $CLIENT_AWS_ACCOUNT \
+          xilution-developer-role \
+          $K8S_CLUSTER_NAME \
+          $PENGUIN_PIPELINE_ID \
+          $CODEBUILD_SRC_DIR
   build:
     commands:
       - export LOAD_BALANCER_HOSTNAME=`kubectl get services/ingress-nginx -n ingress-nginx -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
