--- a/buildspecs/seed/buildspec.yaml
+++ b/buildspecs/seed/buildspec.yaml
@@ -12,5 +12,9 @@ phases:
           $CODEBUILD_SRC_DIR
   build:
     commands:
-      - helm tiller run tiller -- helm delete wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME
-      - helm tiller run tiller -- helm del --purge wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME
+      - |
+        ./scripts/seed-data.sh \
+          $XILUTION_ORGANIZATION_ID \
+          $PENGUIN_PIPELINE_ID \
+          $STAGE_NAME \
+          $CODEBUILD_SRC_DIR_SourceCode
