--- a/buildspecs/infrastructure/buildspec-up.yaml
+++ b/buildspecs/infrastructure/buildspec-up.yaml
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - |
-        ./scripts/pre-build.sh \
+        . ./scripts/pre-build.sh \
           $CLIENT_AWS_ACCOUNT \
           xilution-developer-role \
           $K8S_CLUSTER_NAME \
@@ -20,7 +20,6 @@ phases:
           $CODEBUILD_SRC_DIR
   build:
     commands:
-      - env
       - |
         terraform apply \
           -var="organization_id=$XILUTION_ORGANIZATION_ID" \
