--- a/buildspecs/stage/seed/buildspec.yaml
+++ b/buildspecs/stage/seed/buildspec.yaml
@@ -3,18 +3,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - |
-        . ./scripts/pre-build.sh \
-          $CLIENT_AWS_ACCOUNT \
-          xilution-developer-role \
-          $K8S_CLUSTER_NAME \
-          $PENGUIN_PIPELINE_ID \
-          $CODEBUILD_SRC_DIR
+      - . ./scripts/assume-role.sh
+      - ./scripts/terraform-init-trunk.sh
   build:
     commands:
-      - |
-        ./scripts/seed-data.sh \
-          $XILUTION_ORGANIZATION_ID \
-          $PENGUIN_PIPELINE_ID \
-          $STAGE_NAME \
-          $CODEBUILD_SRC_DIR_SourceCode
+      - ./scripts/seed-data.sh
