--- a/buildspecs/stage/test/buildspec.yaml
+++ b/buildspecs/stage/test/buildspec.yaml
@@ -1,9 +1,10 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      nodejs: 12
+  pre_build:
+    commands:
+      - . ./scripts/assume-role.sh
+      - ./scripts/update-kubeconfig.sh
   build:
     commands:
       - ./scripts/test.sh
