--- a/buildspecs/stage/test/buildspec.yaml
+++ b/buildspecs/stage/test/buildspec.yaml
@@ -1,10 +1,9 @@
 version: 0.2
 
 phases:
-  pre_build:
-    commands:
-      - . ./scripts/assume-role.sh
-      - ./scripts/update-kubeconfig.sh
+  install:
+    runtime-versions:
+      nodejs: 12
   build:
     commands:
       - ./scripts/test.sh
