chore: removed -x from scripts

--- a/buildspecs/trunk/verify/buildspec.yaml
+++ b/buildspecs/trunk/verify/buildspec.yaml
@@ -6,5 +6,4 @@ phases:
       nodejs: 12
   build:
     commands:
-      - ./scripts/validate-config.sh xilution-content-delivery-coyote
-      - ./scripts/verify.sh
+      - ./scripts/validate-config.sh xilution-cms-penguin
